Version 1.5.5+svn:
 * Campaigns
   * Legend of Wesmere
     * Newly added to mainline: Intermediate level, 24 scenarios.
   * The new experimental gold carryover system is now supported in Son of the
     Black Eye as well: the choice appears in the difficulty level menu when
     starting the campaign.
 * Editor2
   * Changed the base-terrain key modifier to shift from alt.
     This fixes an issue with some window managers grabbing the event.
   * Added basic mask applying feature
   * Added basic mask creation ("diff") feature
 * Language and i18n:
   * updated translations: Catalan, Czech, Danish, Finnish, Galician, German,
     Hungarian, Italian, Lithuanian, Racv, Slovak, Turkish
   * new translations: Valencian (the previous non-standard translation has
     been renamed to RACV).
   * Fixed Wesnoth looking for editor translations in the wrong place
     (bug #12426)
 * Units:
   * Balancing changes:
     * Gave the Goblin Pillager the same bite attack as the Wolf Rider.
 * WML engine:
   * Created the "consider attack" and "unconsider attack" events. (bug
   #12375)
   * Added "border" parameter to [terrain_mask] that overlays on the border
     in addition to the playable map area. The used mask must have the same
     border_size as the map (i.e. currently 1), else this will be ignored.
   * Restore x1, y1, x2, and y2 after events fired from events.
 * Authoring tools:
   * trackplacer is a pygtk tool that makes it possible to visually edit
     the journey tracks on Wesnoth campaign maps.

Version 1.5.5:
 * Campaigns:
   * A new experimental gold carryover system is now supported in Heir to the
     Throne, Sceptre of Fire and Descent into Darkness: the choice appears in
     the difficulty level menu when starting the campaign.
   * Son of the Black Eye:
     * New portraits for Al'Brock, Flar'Tar and Howgarth.
   * Two Brothers:
     * Rewrite to include story screens by Stefan
     * Improved scenario texts and dialogs
 * Editor2: